Add Vercel deployment configuration
- Add vercel.json with maxDuration: 300 (5 minutes) for serverless functions
- Export Express app from server.js for Vercel detection
- Add engines field to package.json specifying Node.js 18.x

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "stremio-addon-sdk": "^1.6.10",
     "axios": "^1.6.0",
