--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,18 @@
         "server.js": {
             "maxDuration": 300
         }
-    }
+    },
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/server.js" }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET, OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "*" }
+            ]
+        }
+    ]
 }
