--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,27 @@
         }
     },
     "rewrites": [
-        { "source": "/(.*)", "destination": "/server.js" }
+        {
+            "source": "/(.*)",
+            "destination": "/server.js"
+        }
     ],
     "headers": [
         {
             "source": "/(.*)",
             "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "*" },
-                { "key": "Access-Control-Allow-Methods", "value": "GET, OPTIONS" },
-                { "key": "Access-Control-Allow-Headers", "value": "*" }
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "*"
+                }
             ]
         }
     ]
